<resources>
    <string name="app_name">Tipify</string>

    <string name="register_username">Username</string>

    <string name="action_search">Search</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>


    <!-- nav drawer -->
    <string name="nav_about">About</string>
    <string name="nav_history">History</string>
    <string name="nav_how">How to use</string>

</resources>
