<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single"
        android:id="@+id/item"
        android:visible="true">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/nav_about"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_intro"
            android:icon="@drawable/ic_menu_how"
            android:title="@string/nav_how" />

    </group>

    <group
        android:id="@+id/item1"
        android:visible="true">
        <item
            android:id="@+id/nav_share"
            android:title="Share" />

        <item
            android:id="@+id/nav_help"
            android:title="Help" />
    </group>


</menu>

