<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp" >
            <LinearLayout
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="53dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:layout_height="53dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="33dp" />
            </LinearLayout>


            <EditText
                android:drawableLeft="@drawable/ic_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/register_username"
                android:ems="10"
                android:background="@drawable/edittext"
                android:padding="15dp"
                android:maxLength="24"
                android:id="@+id/email"/>

            <EditText
                android:drawableLeft="@drawable/ic_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/pass"
                android:layout_marginTop="1dp"
                android:maxLength="20"
                android:background="@drawable/edittext"
                android:padding="15dp"
                />

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_input_cursor_2"
                android:id="@+id/signinBtn"
                android:textStyle="bold" />




        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>